--- a/cherrytree-user-manual.adoc
+++ b/cherrytree-user-manual.adoc
@@ -15,7 +15,7 @@ If you have questions please ask in the {forum}[forum], or visit {feedback}[feed
 
 === About This Manual
 
-This manual was written for Cherrytree version 0.38.6. Please check the {website}[website] for the latest version.
+This manual was written for Cherrytree version 0.38.6. Please check the {manual-web}[website] for the latest version.
 
 === Get Involved
 
@@ -37,7 +37,7 @@ The current version of Cherrytree requires:
 
 After cloning, run in the top folder ./cherrytree or python2 cherrytree.
 
-Development is currently focused on porting from Python to C++/GTKmm. These changes are located on the master branch within the {future}[future directory]. The latest, stable release can also be found on the master branch. The pygi branch is a discontinued attempt to port to the python bindings for GTK3. It failed due to python-gtksourceview2 being deprecated.
+Development is currently focused on porting from Python to C++/GTKmm. These changes are located on the master branch within the {future}[future directory]. The latest, stable release can also be found on the master branch. The pygi branch is a discontinued attempt to port to the python bindings for GTK3. It failed due to missing pygi bindings for a core clipboard functionality
 
 Developers can help by making addressing bugs submitted to the repository’s {issues}[issues page].
 
@@ -50,7 +50,7 @@ If needed, here is a short guide on {issues-guide}[writing a proper GitHub issue
 
 *Writing*
 
-The Cherrytree user manual is currently under revision and can be found in the {manual}[manual].
+The Cherrytree user manual is currently under revision and can be found in the {manual-repo}[manual].
 
 *Translation*
 
@@ -74,24 +74,63 @@ Cherrytree is available for Linux and Windows.
 . Download the latest installer with a ‘.rpm’ extension from the {download}[downloads webpage].
 . Open a terminal and navigate to the directory where your installer
 is located.
-. Type the following command, replacing “cherrytree.rpm” with the name of your installation file: `sudo rpm -Uvh --force cherrytree.rpm`. Provide your password when prompted to begin the installation, as shown in <<figure-2.1>> . +
+. Type the following command, replacing “cherrytree.rpm” with the name of your installation file: `sudo rpm -Uvh --force cherrytree.rpm`. Provide your password when prompted to begin the installation, as shown in <<figure-2.01>> . +
 +
-[[figure-2.1]]
-.*Figure 2.1:* Red Hat installation steps.
-[reftext="Figure 2.1"]
-{rhinstall}
+[[figure-2.01]]
+.Figure 2.01
+{rhinstall01}
 
 === Installing on Ubuntu and other Debian derivatives
 
+Cherrytree can be installed to Ubuntu via the "Ubuntu Software" application or the command line.
+
 *Option One: Ubuntu Software*
 
-Cherrytree can be found in the Ubuntu Software library. Open Ubuntu Software and search for Cherrytree, then select the application and click the ‘install’ button. Provide your password when prompted to begin the installation. <<figure-2.2>> +
+A PPA (Personal Package Archive) must be added to ensure that the latest version of Cherrytree is installed through Ubuntu Software. 
 
-[[figure-2.2]]
-.*Figure 2.2:* Ubuntu installation steps.
-[reftext="Figure 2.2"]
-{ubuntuinstall}
+[start=1]
+. Open the "Software and Updates" application. <<figure-2.02>> +
++
+[[figure-2.02]]
+.Figure 2.02
+{ubuntuinstall01}
 
+. Navigate to the "Other Software" tab and click the "Add" button. <<figure-2.03>> +
++
+[[figure-2.03]]
+.Figure 2.03
+{ubuntuinstall02}
+
+. Paste the following snippet `ppa:giuspen/ppa` into the textbox, then click the "Add Source" button and enter your password when prompted. <<figure-2.04>> +
++
+[[figure-2.04]]
+.Figure 2.04
+{ubuntuinstall03}
+
+. Confirm that the PPA has been added, then close the window. <<figure-2.05>> +
++
+[[figure-2.05]]
+.Figure 2.05
+{ubuntuinstall04}
+
+. When prompted, click the "Reload" button and enter your password when prompted to install updates from the newly added source. <<figure-2.06>> +
++
+[[figure-2.06]]
+.Figure 2.06
+{ubuntuinstall05}
+
+. Open Ubuntu Software and search for Cherrytree, then select the application and click the  "Install" button. Provide your password when prompted to begin the installation. <<figure-2.07>> +
++
+[[figure-2.07]]
+.Figure 2.07
+{ubuntuinstall06}
+
+. After the application is installed, click "Launch" and confirm that the latest version is installed." <<figure-2.08>> + 
+Reference the {changelog}[changelog] to determine the latest version. +
++
+[[figure-2.08]]
+.Figure 2.08
+{ubuntuinstall07}
 
 *Option Two: Command Line*
 
@@ -100,59 +139,52 @@ Cherrytree can be found in the Ubuntu Software library. Open Ubuntu Software and
 
 . Open a terminal and navigate to the directory where your installer is located.
 
-. Type the following command, replacing “cherrytree.deb” with the name of your installation file: `sudo dpkg -i cherrytree.deb`. Provide your password when prompted to begin the installation. <<figure-2.3>> +
+. Type the following command, replacing “cherrytree.deb” with the name of your installation file: `sudo dpkg -i cherrytree.deb`. Provide your password when prompted to begin the installation. <<figure-2.09>> +
 +
-[[figure-2.3]]
-.*Figure 2.3:* Debian installation steps.
-[reftext="Figure 2.3"]
-{debinstall}
+[[figure-2.09]]
+.Figure 2.09
+{debinstall01}
 
 === Installing on Windows
 
 [start=1]
 . Download and run the latest installer with an ‘.exe’ extension from {download}[downloads webpage].
 
-. Select a language and click the ‘Next’ button. <<figure-2.4>> +
+. Select a language and click the ‘Next’ button. <<figure-2.10>> +
 +
-[[figure-2.4]]
-.*Figure 2.4*
-[reftext="Figure 2.4"]
-{wininstall1}
+[[figure-2.10]]
+.Figure 2.10
+{wininstall01}
 
-. Accept the license, then click the ‘Next’ button. <<figure-2.5>> +
+. Accept the license, then click the ‘Next’ button. <<figure-2.11>> +
 +
-[[figure-2.5]]
-.*Figure 2.5*
-[reftext="Figure 2.5"]
-{wininstall2}
+[[figure-2.11]]
+.Figure 2.11
+{wininstall02}
 
-. Select a directory for the application to be installed and click the ‘Next’ button. <<figure-2.6>> +
+. Select a directory for the application to be installed and click the ‘Next’ button. <<figure-2.12>> +
 +
-[[figure-2.6]]
-.*Figure 2.6*
-[reftext="Figure 2.6"]
-{wininstall3}
+[[figure-2.12]]
+.Figure 2.12
+{wininstall03}
 
-. Select ‘Create a desktop shortcut’ if you wish to have a shortcut. Click the ‘Next’ button. <<figure-2.7>> +
+. Select ‘Create a desktop shortcut’ if you wish to have a shortcut. Click the ‘Next’ button. <<figure-2.13>> +
 +
-[[figure-2.7]]
-.*Figure 2.7*
-[reftext="Figure 2.7"]
-{wininstall4}
+[[figure-2.13]]
+.Figure 2.13
+{wininstall04}
 
-. Review the provided summary, then click ‘Install’ if you are ready to proceed. <<figure-2.8>> +
+. Review the provided summary, then click ‘Install’ if you are ready to proceed. <<figure-2.14>> +
 +
-[[figure-2.8]]
-.*Figure 2.8*
-[reftext="Figure 2.8"]
-{wininstall5}
+[[figure-2.14]]
+.Figure 2.14
+{wininstall05}
 
-. Click ‘Finish’ to complete the installation. <<figure-2.9>> +
+. Click ‘Finish’ to complete the installation. <<figure-2.15>> +
 +
-[[figure-2.9]]
-.*Figure 2.9*
-[reftext="Figure 2.9"]
-{wininstall6}
+[[figure-2.15]]
+.Figure 2.15
+{wininstall06}
 
 *Note:* If you have a previous version of Cherrytree installed, an error may occur when trying to overwrite “dbus-daemon.exe”. If so, please skip the overwrite and restart your computer, then try again.
 
@@ -171,27 +203,26 @@ This brief quick start guide will teach you about the following:
 
 === Interface
 
-Cherrytree’s interface is made of four sections. These sections are highlighted in <<figure-3.1>>:
+Cherrytree’s interface is made of four sections. These sections are highlighted in <<figure-3.01>>:
 
-[[figure-3.1]]
-.*Figure 3.1:* Cherrytree interface.
-[reftext="Figure 3.1"]
+[[figure-3.01]]
+.Figure 3.01
 {interface}
 
 *Menu Bar (Red)*
 
 The menu bar contains the following menus:
 
-* File - Document-management features such as opening, saving, printing, and exporting.
-* Edit - Application preferences, basic copy and paste features, and object insertion features.
-* Formatting - Text formatting options.
-* Tree - Node management features.
-* Search - Features for search and replace.
-* View - Interface options.
-* Bookmarks - Bookmarks will be listed in this menu. You can add bookmarks by right-clicking a node within the tree view and selecting the “Add to Bookmarks” option.
-* Import - Cherrytree can import from a variety of sources including KeepNote, NoteCase, Tomboy, HTML files, others.
-* Export - Cherrytree documents can be exported to HTML, PDF, and Plain Text.
-* Help - Contains “Check for updates”, an “About” section, and a link to the online manual."
+* *File* - Document-management features such as opening, saving, printing, and exporting.
+* *Edit* - Application preferences, basic copy and paste features, and object insertion features.
+* *Formatting* - Text formatting options.
+* *Tree* - Node management features.
+* *Search* - Features for search and replace.
+* *View* - Interface options.
+* *Bookmarks* - Bookmarks will be listed in this menu. You can add bookmarks by right-clicking a node within the tree view and selecting the “Add to Bookmarks” option.
+* *Import* - Cherrytree can import from a variety of sources including KeepNote, NoteCase, Tomboy, HTML files, others.
+* *Export* - Cherrytree documents can be exported to HTML, PDF, and Plain Text.
+* *Help* - Contains “Check for updates”, an “About” section, and a link to the online manual."
 
 *Toolbar (Purple)*
 
@@ -199,7 +230,7 @@ The toolbar has many commonly used options for managing nodes, formatting text, 
 
 The toolbar can be edited by clicking “Edit” within the menu bar and navigating to “Preferences > Toolbar”
 
-The size of the toolbar icons has been increased within the image above. Icon size can be changed by clicking “View” in the menu bar, then selecting the “Increase Toolbar Icon Size” option for bigger icons or “Decrease Toolbar Icon Size” for smaller icons.
+The size of the toolbar icons has been increased within <<figure-3.01>>. Icon size can be changed by clicking “View” in the menu bar, then selecting the “Increase Toolbar Icon Size” option for bigger icons or “Decrease Toolbar Icon Size” for smaller icons.
 
 *Tree View (Green)*
 
@@ -218,28 +249,25 @@ TODO: Introduction Text
 *Creating Your First Node*
 
 [start=1]
-. Click the “Add Node” button, shown in <<figure-3.2>>. within the menu bar. +
+. Click the “Add Node” button, shown in <<figure-3.02>>. within the menu bar. +
 +
-[[figure-3.2]]
-.*Figure 3.2*
-[reftext="Figure 3.2"]
+[[figure-3.02]]
+.Figure 3.02
 {tree-node-add}
 
-. Within the _New Node Properties_ menu, shown in <<figure-3.3>> give your node a name and select a node type, then click the “OK” button. If you’re unsure which node type to use, please view the link:#choosing-a-node-type[node type section] of this manual. +
+. Within the _New Node Properties_ menu, shown in <<figure-3.03>> give your node a name and select a node type, then click the “OK” button. If you’re unsure which node type to use, please view the link:#choosing-a-node-type[node type section] of this manual. +
 +
-[[figure-3.3]]
-.*Figure 3.3*
-[reftext="Figure 3.3"]
+[[figure-3.03]]
+.Figure 3.03
 {new-node}
 
 
 *Node Menu*
 
-Right-click a node to display a menu of the options available to it. <<figure-3.4>> +
+Right-click a node to display a menu of the options available to it. <<figure-3.04>> +
 
-[[figure-3.4]]
-.*Figure 3.4:* Node options.
-[reftext="Figure 3.4"]
+[[figure-3.04]]
+.Figure 3.04
 {tree-menu}
 
 === Insert Objects
@@ -472,25 +500,26 @@ Cherrytree is written and maintained by Giuseppe Penone.
 
 *Translation:*
 
-* Pavel Fric (Czech)
-* Vincenzo Reale (Italian)
-* Klaus Becker (French)
-* Frank Brungräber (German)
-* Giuseppe Penone (Italian)
-* Marcin Swierczynski (Polish)
-* Andriy Kovtun (Russian, Ukrainian)
-* Daniel MC (Spanish)
-* Channing Wong (Chinese Simplified)
-* Vinicius Schmidt (Brazilian Portuguese)
-* Patrick Vijgeboom (Dutch)
-* Luuk Geurts (Dutch)
-* Seda Stamboltsyan (Armenian)
-* Ferhat Aydin (Turkish)
-* Piyo (Japanese)
-* Zygis (Lithuanian)
-* Henri Kaustinen (Finnish)
-* Delphina (Greek)
-* Erik Lovrič (Slovenian)
+* Armenian (Seda Stamboltsyan, up to date)
+* Chinese Simplified (Channing Wong, TO BE UPDATED)
+* Czech (Pavel Fric, up to date)
+* Dutch (Luuk Geurts, up to date)
+* English (default)
+* French (Klaus Becker, up to date)
+* Finnish (Henri Kaustinen, up to date)
+* German (Frank Brungräber, up to date)
+* Greek (Delphina, up to date)
+* Italian (Vincenzo Reale, up to date)
+* Japanese (Piyo, up to date)
+* Lithuanian (Zygis, TO BE UPDATED)
+* Polish (Marcin Swierczynski, up to date)
+* Portuguese Brazil (TO BE UPDATED)
+* Russian (Andriy Kovtun, up to date)
+* Slovenian (Erik Lovrič, up to date)
+* Spanish (Daniel MC, up to date)
+* Turkish (Ferhat Aydin, TO BE UPDATED)
+* Ukrainian (Andriy Kovtun, up to date)
+
 
 *Artwork:*
 
