--- a/includes/__variables.adoc
+++ b/includes/__variables.adoc
@@ -41,6 +41,14 @@
 :new-node: image:images/newnode.png[New node properties.]
 :interface: image:images/interface.png[Cherrytree interface.]
 :tree-menu: image:images/treemenu.png[Tree menu.]
+:insert-menu: image:images/insert01.png[Insert menu options.]
+:insert-toolbar: image:images/insert02.png[Insert toolbar options.]
+:save-menu: image:images/save01.png[File menu, save.]
+:save-type: image:images/save02.png[Save type selection menu.]
+:save-as: image:images/save03.png[Windows save as menu.]
+:export-menu: image:images/export01.png[Export menu.]
+:export-scope: image:images/export02.png[Export type selection.]
+
 
 // Settings Images
 :pref01: image:images/pref01.png[Text and Code.]
