--- a/includes/_05_nodes.adoc
+++ b/includes/_05_nodes.adoc
@@ -1,25 +1,29 @@
 == Nodes
 
+In computer science, a tree is a data structure consisting of nodes which are connected by edges. In the tree shown in <<figure-5.01>>, "my_book.ctb" is the root node. "Part 1" is one of the three child nodes that belong to "my_book.ctb" and is also the parent node of "Chapter 1", "Chapter 2", and "Chapter 3". 
+
+[[figure-5.01]]
+.Figure 5.01
+{binary-tree}
+
+<<figure-5.01>> might look like <<figure-5.02>> in Cherrytree, where the document name is the root node.
+
+[[figure-5.02]]
+.Figure 5.02
+{binary-tree-demo}
+
 Content
+
+=== Creating Nodes
 
 === Managing Nodes
 
-Content
-
 === Choosing a Node Type
-
-Content
 
 *Plain Text* Content +
 *Rich Text* Content +
 *Syntax Highlighting* Content
 
-=== Editing Nodes
-
-Content
-
 === Bookmarking
 
-=== Deleting Nodes
-
-Content
+=== Node options
