--- a/includes/__variables.adoc
+++ b/includes/__variables.adoc
@@ -1,6 +1,7 @@
 // _______________________ Variables ________________________
 
 // Links
+:_asciidoctor: https://asciidoctor.org/
 :changelog: https://github.com/giuspen/cherrytree/blob/master/changelog.txt
 :forum: https://www.giuspen.com/forum/cherrytree-2/
 :feedback: https://www.giuspen.com/feedback
@@ -48,7 +49,12 @@
 :save-as: image:images/save03.png[Windows save as menu.]
 :export-menu: image:images/export01.png[Export menu.]
 :export-scope: image:images/export02.png[Export type selection.]
+:binary-tree: image:images/binary_tree.png[Binary tree.]
+:binary-tree-demo: image:images/binary_tree_demo.png[Binary tree demo.]
 
+// Files Images
+:file-menu: image:images/file-menu.png[File Menu.]
+:file-toolbar: image:images/file-toolbar.png[File Menu.]
 
 // Settings Images
 :pref01: image:images/pref01.png[Text and Code.]
